--- a/aluratreinamento.css
+++ b/aluratreinamento.css
@@ -273,4 +273,15 @@ h2 {
     color: var(--primary-color);
     font-size: 3rem;
     margin-left: 0;
+
+}
+
+@media (max-width: 768px) {
+  body {
+    padding: 10px;
+  }
+
+  .container {
+    flex-direction: column;
+  }
 }
