--- a/aluratreinamento.css
+++ b/aluratreinamento.css
@@ -262,6 +262,9 @@ img {
 
 header div {
     display: flex;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
-    gap: .5rem;
 }
+
+
