--- a/aluratreinamento.css
+++ b/aluratreinamento.css
@@ -260,16 +260,14 @@ img {
     }
 }
 
-header {
+header div {
     display: flex;
-    justify-content: space-between;
+    flex-direction: row;
+    justify-content: center;
     align-items: center;
 }
 
-header div input,
-header div button {
-    vertical-align: middle;
-}
+
 
 
 
